1.0.0
-----
 * Added additional JVM options to increase max open FD limit for MacOS (CASSANDRASC-135)
 * Detect out of range data and cleanup using nodetool (CASSANDRASC-134)
 * Allow optional reason to abort restore jobs (CASSANDRASC-133)
 * Fix SidecarLoadBalancingPolicy unexpectedly removing local node and improve CI stability (CASSANDRASC-131)
 * Reduce implementations accessible from client (CASSANDRASC-127)
 * Fix wait time acquired in SidecarRateLimiter (CASSANDRASC-124)
 * Make RestoreJobDiscoverer less verbose (CASSANDRASC-126)
 * Import Queue pendingImports metrics is reporting an incorrect value (CASSANDRASC-125)
 * Add missing method to retrieve the InetSocketAddress to DriverUtils (CASSANDRASC-123)
 * Reduce filesystem calls while streaming SSTables (CASSANDRASC-94)
 * Record existing and additional metrics with dropwizard (CASSANDRASC-117)
 * Support sending json request (CASSANDRASC-118)
 * Add FilteringMetricRegistry to allow filtering of metrics (CASSANDRASC-115)
 * Allow for JmxClient to be extensible (CASSANDRASC-116)
 * Improve observability in Sidecar (CASSANDRASC-111)
 * Improve logging for slice restore task (CASSANDRASC-107)
 * Add restore task watcher to report long running tasks (CASSANDRASC-106)
 * RestoreSliceTask could be stuck due to missing exception handling (CASSANDRASC-105)
 * Make hash algorithm implementation pluggable (CASSANDRASC-114)
 * Fix ClosedChannelException when downloading from S3 (CASSANDRASC-112)
 * Fix NPE thrown when getting StorageClient from pool (CASSANDRASC-110)
 * Relocate Sidecar common classes in vertx-client-shaded (CASSANDRASC-104)
 * Automated yaml type binding for deserialization (CASSANDRASC-103)
 * Upgrade Vert.x version in Sidecar to 4.5 (CASSANDRASC-101)
 * Break restore job into stage and import phases and persist restore slice status on phase completion (CASSANDRASC-99)
 * Improve logging for traffic shaping / rate limiting configuration (CASSANDRASC-98)